Fixed issue on mobile rendering
Went from `display: block` to `display: flex`

--- a/src/sass/snackbar.sass
+++ b/src/sass/snackbar.sass
@@ -6,7 +6,7 @@
   min-height: 14px
   background-color: darken(#223140, 15%)
   position: fixed
-  display: block
+  display: flex
   justify-content: space-between
   align-items: center
   color: white
@@ -41,7 +41,7 @@
   .snackbar-container
     left: 0
     right: 0
-    
+
 .snackbar-pos
   &.bottom-center
     top: auto !important
@@ -69,4 +69,3 @@
     bottom: auto !important
     top: 0
     right: 0
-  
